--- a/resource-tracker/package.json
+++ b/resource-tracker/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ant-design/charts": "^2.2.7",
     "@ant-design/icons": "^6.0.0",
+    "@react-three/drei": "^9.56.6",
+    "@react-three/fiber": "^8.13.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -12,14 +14,18 @@
     "antd": "^5.25.1",
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
+    "cesium": "^1.129.0",
     "moment": "^2.30.1",
     "powerbi-client": "^2.23.1",
     "powerbi-client-react": "^2.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.33.2",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "resium": "^1.19.0-beta.1",
+    "three": "^0.176.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
