--- a/resource-tracker/package.json
+++ b/resource-tracker/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.25.1",
+    "antd": "^5.25.4",
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "cesium": "^1.129.0",
+    "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "powerbi-client": "^2.23.1",
     "powerbi-client-react": "^2.0.0",
